@@ -8,7 +8,7 @@
     <description>Atelier de Création d'Enseignement Multimodal</description>
     <properties>
     	<!-- TODO 1 Pick the version of jetty you want. -->
-        <jetty.version>9.1.0.v20131115</jetty.version>
+        <jetty.version>9.1.3.v20140225</jetty.version>
         <esupcommons.version>0.3.4</esupcommons.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
@@ -105,48 +105,20 @@
                 </configuration>
             </plugin>
             <plugin>
-            <!--
-                <groupId>org.mortbay.jetty</groupId>
-                <artifactId>maven-jetty-plugin</artifactId>
-                <version>6.1.26</version>
-            -->
                 <groupId>org.eclipse.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>${jetty.version}</version>
-                <!-- 
-                <configuration>
-                	<jvmArgs>-Xmx512M -XX:MaxPermSize=512m</jvmArgs>
-                    <contextPath>/</contextPath>
-					<scanIntervalSeconds>3</scanIntervalSeconds>
-					<scanTargetPatterns>
-						<scanTargetPattern>
-							<directory>src/main/webapp/WEB-INF</directory>
-							<excludes>
-								<exclude>**/*.jsp</exclude> <exclude>**/*.xhtml</exclude>
-							</excludes>
-							<includes>
-								<include>**/*.properties</include>
-								<include>**/*.xml</include>
-							</includes>
-						</scanTargetPattern>
-					</scanTargetPatterns>
-                </configuration>
-                <executions>
-                	<execution>
-                		<phase>test</phase>
-                		<goals>
-                			<goal>run-exploded</goal>
-                		</goals>
-                	</execution>
-                </executions>
-                -->
+			    <configuration>
+					<webApp>
+						<contextPath>/</contextPath>
+                		<descriptor>ACEM-web-jsf-servlet/src/main/webapp/WEB-INF/web.xml</descriptor>
+					</webApp>
+				</configuration>
             </plugin>
         </plugins>
     </build>
   <modules>
-    <!-- <module>ACEM-batch</module> -->
     <module>ACEM-dal</module>
-    <!-- <module>ACEM-utils</module> -->
     <module>ACEM-domain-beans</module>
     <module>ACEM-domain-services</module>
     <module>ACEM-web-jsf-servlet</module>
